add pyenv and poetry to brewfile and zshrc

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,3 +16,5 @@
 	path = ~/.config/git/personal_config
 [includeIf "gitdir:~/"]
 	path = ~/.config/git/personal_config
+[init]
+	defaultBranch = main
