--- a/.gitconfig
+++ b/.gitconfig
@@ -18,3 +18,6 @@
 	path = ~/.config/git/personal_config
 [init]
 	defaultBranch = main
+[alias]
+	share = !npx git-share share
+	take = !npx git-share take
