--- a/.gitconfig
+++ b/.gitconfig
@@ -29,3 +29,5 @@
 	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
 [commit]
 	gpgsign = true
+[core]
+	excludesfile = ~/.gitignore
